task2/lab3part2ingress.yaml
# ============================================================
# LAB 3 - PART 2: INGRESS + SERVICES (PRODUCTION CLEAN)
# Namespace: world
# ============================================================

apiVersion: v1
kind: Namespace
metadata:
  name: iti46
---
apiVersion: v1
kind: Namespace
metadata:
  name: world

# ============================================================
# AFRICA DEPLOYMENT
# ============================================================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: africa
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: africa
  template:
    metadata:
      labels:
        app: africa
    spec:
      containers:
        - name: africa
          image: husseingalal/africa:latest
          ports:
            - containerPort: 80

# ============================================================
# EUROPE DEPLOYMENT
# ============================================================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: europe
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: europe
  template:
    metadata:
      labels:
        app: europe
    spec:
      containers:
        - name: europe
          image: husseingalal/europe:latest
          ports:
            - containerPort: 80

# ============================================================
# AFRICA SERVICE
# ============================================================
---
apiVersion: v1
kind: Service
metadata:
  name: africa
  namespace: world
spec:
  type: ClusterIP
  selector:
    app: africa
  ports:
    - name: http
      port: 80
      targetPort: 80

# ============================================================
# EUROPE SERVICE
# ============================================================
---
apiVersion: v1
kind: Service
metadata:
  name: europe
  namespace: world
spec:
  type: ClusterIP
  selector:
    app: europe
  ports:
    - name: http
      port: 80
      targetPort: 80

#=========================================================
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world-ingress
  namespace: world
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: world.universe.mine
    http:
      paths:
      - path: /europe
        pathType: Prefix
        backend:
          service:
            name: europe
            port:
              number: 8888
      - path: /africa
        pathType: Prefix
        backend:
          service:
            name: africa
            port:
              number: 8888
